	Added new image_description, image_dimensions options to image plugin. Patch contributed by Pat O'Neill.
	Added new media_alt_source, media_poster, media_dimensions options to media plugin. Patch contributed by Pat O'Neill.
	Added new ability to specify high/low dpi versions custom button images for retina displays.
	Added preview of classes for the selectboxes used by the link_class_list/image_class_list options.
	Added support for Sauce Labs browser testing using the new saucelabs-tests build target.
	Added title input field to link dialog for a11y reasons can be disabled by using the link_title option.
	Fixed so the toolbar option handles an array as input for multiple toolbar rows.
	Fixed so the editor renders in XHTML mode apparently some people still use this rendering mode.
	Fixed so icons gets rendered better on Firefox on Mac OS X by applying -moz-osx-font-smoothing.
	Fixed so the auto detected external media sources produced protocol relative urls. Patch contributed by Pat O'Neill.
	Fixed so it's possible to update the text of a button after it's been rendered to page DOM.
	Fixed bug where iOS 7.1 Safari would open linked when images where inserted into links.
	Fixed bug where IE 11 would scroll to the top of inline editable elements when applying formatting.
	Fixed bug where tabindex on elements within the editor contents would cause issues on some browsers.
	Fixed bug where link text wouldn't be properly updated in gecko if you changed an existing link.
	Fixed bug where it wasn't possible to close dialogs with the escape key if the focus was inside a textbox.
	Fixed bug where Gecko wouldn't paste rich text contents from Word or other similar word processors.
	Fixed bug where binding events after the control had been rendered could fail to produce a valid delegate.
	Fixed bug where IE 8 would throw and error when removing editors with a cross domain content_css setting.